Add address validation & Fix UI Issue

--- a/PlanetWallet/Resources/ko.lproj/Localizable.strings
+++ b/PlanetWallet/Resources/ko.lproj/Localizable.strings
@@ -24,7 +24,7 @@
 "The name can not be blank." = "The name can not be blank.";
 "The name can not be blank." = "이름은 공백일 수 없습니다.";
 "Add Planet" = "플래닛 추가하기";
-"Add Planet" = "플래닛 추가하기";
+"Create Planet" = "플래닛 추가하기";
 "Import Another Planet" = "플래닛 가져오기";
 "Import Planet" = "플래닛 가져오기";
 "Mnemonic" = "니모닉 구문";
@@ -32,36 +32,36 @@
 "Enter password (Option)" = "비밀번호 입력 (옵션)";
 "Enter Mnemonic Phrase" = "니모닉 구문 입력";
 "Please enter the correct Mnemonic Phrase." = "올바른 니모닉 구문을 입력해 주세요.";
-"It is a mnemonic that already exists." = "이미 존재하는 니모닉 구문입니다.";
-"It does not fit the mnemonic type." = "니모닉 구문이 맞지 않습니다.";
+"It is a mnemonic that already exists." = "이미 존재하는 니모닉 구문입니다.";/*   Error Msg   */
+"It does not fit the mnemonic type." = "니모닉 구문이 맞지 않습니다.";/*   Error Msg   */
 "Enter privateKey" = "개인키 입력";
-"It is a privateKey that already exists." = "이미 존재하는 개인키 입니다.";
-"The privateKey type does not match." = "개인키의 형식이 맞지 않습니다.";
-"Your Planet Keep safe here" = "니모닉 문구가 백업 되지 않았습니다.";
+"It is a privateKey that already exists." = "이미 존재하는 개인키 입니다.";/*   Error Msg   */
+"The privateKey type does not match." = "개인키의 형식이 맞지 않습니다.";/*   Error Msg   */
+"Your Planet Keep safe here" = "니모닉 문구가 백업 되지 않았습니다.";/*   Error Msg   */
 "Copy" = "주소 복사";
 "Transfer" = "전송하기";
 "Copy To Clipboard" = "복사 되었습니다.";
-"To exit the app, press the Back button again." = "뒤로가기를 한번 더 누르시면 앱이 종료됩니다.";
+"To exit the app, press the Back button again." = "뒤로가기를 한번 더 누르시면 앱이 종료됩니다.";/*   Not Used   */
 "Manage Tokens" = "토큰 관리";
 "You haven’t made any \n transaction yet :)" = "트랜잭션이 존재하지 않습니다. :)";
 "Manage Tokens" = "토큰 관리";
 "Token List" = "토큰 리스트";
 "Custom Token" = "커스텀 토큰";
 "Search" = "검색";
-"Haven’t found\n what you’re looking for?" = "검색 결과가 없습니다. 검색어를 확인해 주세요.";
+"Haven’t found\n what you’re looking for?" = "검색 결과가 없습니다. 검색어를 확인해 주세요.";/*   Error Msg   */
 "Contract Address" = "컨트랙트 주소";
 "Token Symbol" = "심볼";
 "Decimals of Precision" = "자릿수";
 "Add Token" = "확인";
-"This is not a valid Contract address." = "컨트랙트 주소가 맞지 않습니다.";
+"This is not a valid Contract address." = "컨트랙트 주소가 맞지 않습니다.";/*   Error Msg   */
 "Scan QR code" = "QR Code 스캔하기";
 "Search" = "검색하기";
 "Search" = "검색어 입력";
-"You can transfer to\n the Planet name and Wallet address." = "검색 결과가 없습니다.\n플래닛 이름이나 주소를 확인해 주세요.";
+"You can transfer to\n the Planet name and Wallet address." = "검색 결과가 없습니다.\n플래닛 이름이나 주소를 확인해 주세요.";/*   Error Msg   */
 "Paste from Clipboard" = "복사한 주소 가져오기";
 "Reset" = "초기화";
-"You don’t have enough amount to send" = "자산보다 입력한 금액이 큽니다.";
-"Transfer %@ " = "%@ 전송하기";
+"You don’t have enough amount to send" = "자산보다 입력한 금액이 큽니다.";/*   Error Msg   */
+"Transfer %@" = "%@ 전송하기";
 "from" = "보내는 이";
 "Amount" = "금액";
 "Fee" = "수수료";
@@ -111,7 +111,7 @@
 "Fees:" = "수수료:";
 "Cancel" = "취소";
 "Save" = "저장";
-"Gas Price OR Gas Limit Not Spaces." = "가스비와 가스한도는 모두 비어 있을 수 없습니다.";
-"Gas Limit is at least 21,000" = "최소 가스 한도는 21,000 입니다.";
-"Gas Price is at least 1" = "가스비는 최소 1 Gwei 이상 입니다.";
+"Gas Price OR Gas Limit Not Spaces." = "가스비와 가스한도는 모두 비어 있을 수 없습니다.";/*   Error Msg   */
+"Gas Limit is at least 21,000" = "최소 가스 한도는 21,000 입니다.";/*   Error Msg   */
+"Gas Price is at least 1" = "가스비는 최소 1 Gwei 이상 입니다.";/*   Error Msg   */
 "Please enter your password again." = "한번 더 입력해주세요.";
