--- a/PlanetWallet/Resources/ko.lproj/Localizable.strings
+++ b/PlanetWallet/Resources/ko.lproj/Localizable.strings
@@ -6,112 +6,113 @@
   Copyright © 2019 grabity. All rights reserved.
 */
 
-"PlanetWallet" = "PlanetWallet";
-"Continue" = "다음";
-"Please allow camera privileges in Settings > Permissions tab." = "휴대폰 설정에서 카메라 권한을 허용해 주세요."; /*   Android와 다른 string필요    */
-"To use QR Scan, please agree to the camera authority." = "QR 코드를 스캔하기 위하여 카메라 권한을 허용해주세요.";
-"Verification Code" = "비밀번호를 입력하세요.";
-"Registration PIN Code" = "비밀번호를 등록하세요.";
-"Code incorrect" = "비밀번호가 일치하지 않습니다.";
-"Change PIN Code" = "새 비밀번호를 입력하세요.";
-"Enter the 4 digit + alphabet" = "숫자 4개와 알파벳 조합입니다.";
-"Please check your code" = "확인 후 다시 입력해주세요.";
-"Verification Code" = "비밀번호를 입력하세요.";
-"Code incorrect" = "비밀번호가 일치하지 않습니다.";
-"Change PIN Code" = "새 비밀번호를 입력하세요.";
-"Enter the 4 digit + alphabet" = "숫자 4개와 알파벳 조합입니다.";
-"Please check your code" = "확인 후 다시 입력해주세요.";
-"The name can not be blank." = "The name can not be blank.";
-"The name can not be blank." = "이름은 공백일 수 없습니다.";
-"Add Planet" = "플래닛 추가하기";
-"Create Planet" = "플래닛 추가하기";
-"Import Another Planet" = "플래닛 가져오기";
-"Import Planet" = "플래닛 가져오기";
-"Mnemonic" = "니모닉 구문";
-"Private Key" = "개인키";
-"Enter password (Option)" = "비밀번호 입력 (옵션)";
-"Enter Mnemonic Phrase" = "니모닉 구문 입력";
-"Please enter the correct Mnemonic Phrase." = "올바른 니모닉 구문을 입력해 주세요.";
-"It is a mnemonic that already exists." = "이미 존재하는 니모닉 구문입니다.";/*   Error Msg   */
-"It does not fit the mnemonic type." = "니모닉 구문이 맞지 않습니다.";/*   Error Msg   */
-"Enter privateKey" = "개인키 입력";
-"It is a privateKey that already exists." = "이미 존재하는 개인키 입니다.";/*   Error Msg   */
-"The privateKey type does not match." = "개인키의 형식이 맞지 않습니다.";/*   Error Msg   */
-"Your Planet Keep safe here" = "니모닉 문구가 백업 되지 않았습니다.";/*   Error Msg   */
-"Copy" = "주소 복사";
-"Transfer" = "전송하기";
-"Copy To Clipboard" = "복사 되었습니다.";
-"To exit the app, press the Back button again." = "뒤로가기를 한번 더 누르시면 앱이 종료됩니다.";/*   Not Used   */
-"Manage Tokens" = "토큰 관리";
-"You haven’t made any \n transaction yet :)" = "트랜잭션이 존재하지 않습니다. :)";
-"Manage Tokens" = "토큰 관리";
-"Token List" = "토큰 리스트";
-"Custom Token" = "커스텀 토큰";
-"Search" = "검색";
-"Haven’t found\n what you’re looking for?" = "검색 결과가 없습니다. 검색어를 확인해 주세요.";/*   Error Msg   */
-"Contract Address" = "컨트랙트 주소";
-"Token Symbol" = "심볼";
-"Decimals of Precision" = "자릿수";
-"Add Token" = "확인";
-"This is not a valid Contract address." = "컨트랙트 주소가 맞지 않습니다.";/*   Error Msg   */
-"Scan QR code" = "QR Code 스캔하기";
-"Search" = "검색하기";
-"Search" = "검색어 입력";
-"You can transfer to\n the Planet name and Wallet address." = "검색 결과가 없습니다.\n플래닛 이름이나 주소를 확인해 주세요.";/*   Error Msg   */
-"Paste from Clipboard" = "복사한 주소 가져오기";
-"Reset" = "초기화";
-"You don’t have enough amount to send" = "자산보다 입력한 금액이 큽니다.";/*   Error Msg   */
-"Transfer %@" = "%@ 전송하기";
-"from" = "보내는 이";
-"Amount" = "금액";
-"Fee" = "수수료";
-"Slow" = "느림";
-"Fast" = "빠름";
-"Advanced Options" = "직접 입력";
-"Confirm" = "확인";
-"from" = "보내는 이";
-"Amount" = "보낸 금액";
-"Fee" = "수수료";
-"Date" = "날짜";
-"TxHash" = "트랜잭션 해시";
-"OK" = "확인";
-"Hide Planet" = "숨기기";
-"Backup Mnemonic Phrase" = "니모닉 구문 백업";
-"Backup Private Key" = "개인키 백업";
-"%@ Address" = "%@ 주소";
-"%@ Universe" = "%@ Universe";
-"Mnemonic Phrase" = "니모닉 구문";
-"Backup Mnemonic Phrase" = "니모닉 구문 백업";
-"Save the Mnemonic Phrase safely." = "니모닉 구문을 안전하게 보관해 주세요.\n니모닉 구문은 절대 다른 사람에게 노출하시면 안됩니다.";
-"Universe" = "Universe";
-"PrivateKey" = "개인키";
-"Backup PrivateKey" = "개인키 백업";
-"Save the PrivateKey safely." = "개인키를 안전하게 보관해 주세요.\n개인키는 절대 다른 사람에게 노출하시면 안됩니다.";
-"Planet Rename" = "플래닛 이름 변경";
-"Enter Planet name" = "플래닛 이름 입력";
-"Save" = "저장";
-"Security" = "Security";
-"Change PIN Code" = "비밀번호 변경";
-"Fingerprint" = "지문 인식";
-"You\'re on \n %@" = "당신은 지금\n%@ 에\n있습니다.";
-"Planet" = "Planet";
-"Universe" = "Universe";
-"Security" = "Security";
-"Announcements" = "공지사항";
-"FAQ" = "FAQ";
-"Language" = "언어";
-"Currency" = "통화";
-"Theme Setting" = "테마 설정";
-"Version" = "버전";
-"COPY" = "주소 복사";
-"Transfer" = "전송하기";
-"Advanced Option" = "수수료 직접 입력";
-"Gas Price (Gwei)" = "가스비 (Gwei)";
-"Gas Limit" = "가스 한도";
-"Fees:" = "수수료:";
-"Cancel" = "취소";
-"Save" = "저장";
-"Gas Price OR Gas Limit Not Spaces." = "가스비와 가스한도는 모두 비어 있을 수 없습니다.";/*   Error Msg   */
-"Gas Limit is at least 21,000" = "최소 가스 한도는 21,000 입니다.";/*   Error Msg   */
-"Gas Price is at least 1" = "가스비는 최소 1 Gwei 이상 입니다.";/*   Error Msg   */
-"Please enter your password again." = "한번 더 입력해주세요.";
+
+"app_name" = "PlanetWallet";
+"continue_title" = "다음";
+"camera_permission_never_not_allowed_title" = "휴대폰 설정에서 카메라 권한을 허용해 주세요.";
+"camera_permission_not_allowed_title" = "QR 코드를 스캔하기 위하여 카메라 권한을 허용해주세요.";
+"pincode_registration_verification_code_title" = "비밀번호를 입력하세요.";
+"pincode_registration_registration_code_title" = "비밀번호를 등록하세요.";
+"pincode_registration_code_incorrect_title" = "비밀번호가 일치하지 않습니다.";
+"pincode_registration_change_pin_code_title" = "새 비밀번호를 입력하세요.";
+"pincode_registration_sub_title" = "숫자 4개와 알파벳 조합입니다.";
+"pincode_registration_sub_title_error" = "확인 후 다시 입력해주세요.";
+"pincode_certification_verification_code_title" = "비밀번호를 입력하세요.";
+"pincode_certification_code_incorrect_title" = "비밀번호가 일치하지 않습니다.";
+"pincode_certification_change_pin_code_title" = "새 비밀번호를 입력하세요.";
+"pincode_certification_sub_title" = "숫자 4개와 알파벳 조합입니다.";
+"pincode_certification_sub_title_error" = "확인 후 다시 입력해주세요.";
+"planet_generate_name_not_blank_title" = "The name can not be blank.";
+"planet_name_name_not_blank_title" = "이름은 공백일 수 없습니다.";
+"planet_name_btn_title" = "플래닛 추가하기";
+"wallet_add_btn_add_title" = "플래닛 추가하기";
+"wallet_add_btn_import_title" = "플래닛 가져오기";
+"wallet_import_toolbar_title" = "플래닛 가져오기";
+"wallet_import_tabbar_mnemonic_title" = "니모닉 구문";
+"wallet_import_tabbar_privatekey_title" = "개인키";
+"mnemonic_import_enter_password_title" = "비밀번호 입력 (옵션)";
+"mnemonic_import_enter_mnemonic_phrase_title" = "니모닉 구문 입력";
+"mnemonic_import_correct_mnemonic_phrase_title" = "올바른 니모닉 구문을 입력해 주세요.";
+"mnemonic_import_exists_title" = "이미 존재하는 니모닉 구문입니다.";
+"mnemonic_import_not_match_title" = "니모닉 구문이 맞지 않습니다.";
+"privatekey_import_enter_privateKey_title" = "개인키 입력";
+"privatekey_import_exists_title" = "이미 존재하는 개인키 입니다.";
+"privatekey_import_not_match_title" = "개인키의 형식이 맞지 않습니다.";
+"main_notice_title" = "니모닉 문구가 백업 되지 않았습니다.";
+"main_btn_bottom_copy_title" = "주소 복사";
+"main_btn_bottom_transfer_title" = "전송하기";
+"main_copy_to_clipboard" = "복사 되었습니다.";
+"main_back_pressed_finish_title" = "뒤로가기를 한번 더 누르시면 앱이 종료됩니다.";
+"main_footer_manage_token" = "토큰 관리";
+"main_footer_no_btc_history" = "트랜잭션이 존재하지 않습니다. :)";
+"token_add_toolbar_title" = "토큰 관리";
+"token_add_tabbar_add_token_title" = "토큰 리스트";
+"token_add_tabbar_custom_token_title" = "커스텀 토큰";
+"token_list_search_title" = "검색";
+"token_list_not_search_title" = "검색 결과가 없습니다. 검색어를 확인해 주세요.";
+"custom_token_contract_address_title" = "컨트랙트 주소";
+"custom_token_token_symbol_title" = "심볼";
+"custom_token_decimals_title" = "자릿수";
+"custom_token_btn_title" = "확인";
+"custom_token_not_contract_title" = "컨트랙트 주소가 맞지 않습니다.";
+"scan_qr_toolbar_title" = "QR Code 스캔하기";
+"transfer_toolbar_title" = "검색하기";
+"transfer_search_title" = "검색어 입력";
+"transfer_not_search_title" = "검색 결과가 없습니다.\n플래닛 이름이나 주소를 확인해 주세요.";
+"transfer_clip_board_title" = "복사한 주소 가져오기";
+"transfer_confirm_reset_title" = "초기화";
+"transfer_amount_not_balance_title" = "자산보다 입력한 금액이 큽니다.";
+"transfer_confirm_toolbar_title" = "%@ 전송하기";
+"transfer_confirm_from_title" = "보내는 이";
+"transfer_confirm_amount_title" = "금액";
+"transfer_confirm_fee_title" = "수수료";
+"transfer_confirm_slow_title" = "느림";
+"transfer_confirm_fast_title" = "빠름";
+"transfer_confirm_advanced_options_title" = "직접 입력";
+"transfer_confirm_btn_title" = "확인";
+"tx_receipt_from_title" = "보내는 이";
+"tx_receipt_amount" = "보낸 금액";
+"tx_receipt_fee_title" = "수수료";
+"tx_receipt_date_title" = "날짜";
+"tx_receipt_tx_hash_title" = "트랜잭션 해시";
+"tx_receipt_btn_title" = "확인";
+"detail_planet_hide_planet_title" = "숨기기";
+"detail_planet_backup_mnemonic_phrase_title" = "니모닉 구문 백업";
+"detail_planet_backup_privatekey_title" = "개인키 백업";
+"detail_planet_address" = "%@ 주소";
+"detail_planet_universe" = "%@ Universe";
+"mnemonic_export_toolbar_title" = "니모닉 구문";
+"mnemonic_export_backup_mnemonic_phrase_title" = "니모닉 구문 백업";
+"mnemonic_export_message_title" = "니모닉 구문을 안전하게 보관해 주세요.\n니모닉 구문은 절대 다른 사람에게 노출하시면 안됩니다.";
+"planet_management_toolbar_title" = "Universe";
+"privatekey_export_toolbar_title" = "개인키";
+"privatekey_export_backup_privatekey_title" = "개인키 백업";
+"privatekey_export_message_title" = "개인키를 안전하게 보관해 주세요.\n개인키는 절대 다른 사람에게 노출하시면 안됩니다.";
+"rename_planet_toolbar_title" = "플래닛 이름 변경";
+"rename_planet_enter_planet_name_title" = "플래닛 이름 입력";
+"rename_planet_btn_title" = "저장";
+"detail_setting_toolbar_title" = "Security";
+"detail_setting_change_pincode_title" = "비밀번호 변경";
+"detail_setting_touch_or_face_title" = "지문 인식";
+"setting_planet_main_title" = "당신은 지금\n%@ 에\n있습니다.";
+"setting_planet_title" = "Planet";
+"setting_universe_title" = "Universe";
+"setting_security_title" = "Security";
+"setting_announcements_title" = "공지사항";
+"setting_faq_title" = "FAQ";
+"setting_language_title" = "언어";
+"setting_currency_title" = "통화";
+"setting_theme_setting_title" = "테마 설정";
+"setting_version_title" = "버전";
+"erc_popup_btn_copy_title" = "주소 복사";
+"erc_popup_btn_transfer_title" = "전송하기";
+"fee_popup_advanced_option_title" = "수수료 직접 입력";
+"fee_popup_gas_price_title" = "가스비 (Gwei)";
+"fee_popup_gas_limit_title" = "가스 한도";
+"fee_popup_fees_title" = "수수료:";
+"fee_popup_btn_cancel_title" = "취소";
+"fee_popup_btn_save_title" = "저장";
+"fee_popup_not_spaces_title" = "가스비와 가스한도는 모두 비어 있을 수 없습니다.";
+"fee_popup_gas_limit_least_title" = "최소 가스 한도는 21,000 입니다.";
+"fee_popup_gas_price_least_title" = "가스비는 최소 1 Gwei 이상 입니다.";
+"pincode_registration_one_more_registration_title" = "한번 더 입력해주세요.";
