add biometric authentication

--- a/PlanetWallet/Resources/en.lproj/Localizable.strings
+++ b/PlanetWallet/Resources/en.lproj/Localizable.strings
@@ -10,12 +10,12 @@
 "continue_title" = "Next";
 "camera_permission_never_not_allowed_title" = "Please allow us to access camera in Settings";
 "camera_permission_not_allowed_title" = "Please allow us to access camera QR Scan";
-"pincode_registration_verification_code_title" = "Enter your passcode";
-"pincode_registration_registration_code_title" = "Register your passcode";
-"pincode_registration_code_incorrect_title" = "Passcode is incorrect";
-"pincode_registration_change_pin_code_title" = "Register new passcode";
+"pincode_registration_verification_code_title" = "Enter your PIN Code";
+"pincode_registration_registration_code_title" = "Register your PIN Code";
+"pincode_registration_code_incorrect_title" = "PIN Code is incorrect";
+"pincode_registration_change_pin_code_title" = "Register new PIN Code";
 "pincode_registration_sub_title" = "Please enter the 4 digit + alphabet";
-"pincode_registration_sub_title_error" = "Please check your code and try again";
+"pincode_registration_sub_title_error" = "Please check your code";
 "pincode_certification_verification_code_title" = "Enter your PIN code";
 "pincode_certification_code_incorrect_title" = "PIN Code is incorrect";
 "pincode_certification_change_pin_code_title" = "Register new PIN Code";
@@ -31,24 +31,24 @@
 "wallet_import_tabbar_privatekey_title" = "Private Key";
 "mnemonic_import_enter_password_title" = "Enter password (Option)";
 "mnemonic_import_enter_mnemonic_phrase_title" = "Enter Mnemonic Phrase";
-"mnemonic_import_correct_mnemonic_phrase_title" = "Please enter the correct Mnemonic Phrase.";
-"mnemonic_import_exists_title" = "This Mnemonic Phrase is already existed.";
-"mnemonic_import_not_match_title" = "Mnemonic phrase is incorrect.";
+"mnemonic_import_correct_mnemonic_phrase_title" = "Please enter the correct Mnemonic Phrase";
+"mnemonic_import_exists_title" = "This Mnemonic Phrase is already existed";
+"mnemonic_import_not_match_title" = "Mnemonic phrase is incorrect";
 "privatekey_import_enter_privateKey_title" = "Enter Private Key";
-"privatekey_import_exists_title" = "This Private key is already existed.";
-"privatekey_import_not_match_title" = "The format of Private key is not valid.";
+"privatekey_import_exists_title" = "This Private key is already existed";
+"privatekey_import_not_match_title" = "The format of Private key is not valid";
 "main_notice_title" = "Your Mnemonic Phrase is not back-up";
-"main_btn_bottom_copy_title" = "Copy the address";
+"main_btn_bottom_copy_title" = "Copy";
 "main_btn_bottom_transfer_title" = "Transfer";
 "main_copy_to_clipboard" = "Copy";
-"main_back_pressed_finish_title" = "To exit the app, please press back button one more time.";
+"main_back_pressed_finish_title" = "To exit the app, please press back button one more time";
 "main_footer_manage_token" = "Manage Tokens";
-"main_footer_no_btc_history" = "The transaction is not existed.";
+"main_footer_no_btc_history" = "The transaction is not existed";
 "token_add_toolbar_title" = "Manage Tokens";
 "token_add_tabbar_add_token_title" = "Token List";
 "token_add_tabbar_custom_token_title" = "Custom Token";
 "token_list_search_title" = "Search";
-"token_list_not_search_title" = "There is no result of your search. Please check your search words.";
+"token_list_not_search_title" = "There is no result of your search \nPlease check your search words";
 "custom_token_contract_address_title" = "Contract address";
 "custom_token_token_symbol_title" = "Token symbol";
 "custom_token_decimals_title" = "Digit";
@@ -57,7 +57,7 @@
 "scan_qr_toolbar_title" = "Scan QR code";
 "transfer_toolbar_title" = "Search";
 "transfer_search_title" = "Search";
-"transfer_not_search_title" = "There is no result of your search. Please check your planet name and address.";
+"transfer_not_search_title" = "There is no result of your search \nPlease check your planet name and address";
 "transfer_clip_board_title" = "Paste";
 "transfer_confirm_reset_title" = "Reset";
 "transfer_amount_not_balance_title" = "Your account is not sufficient";
@@ -82,11 +82,11 @@
 "detail_planet_universe" = "%@ Universe";
 "mnemonic_export_toolbar_title" = "Mnemonic Phrase";
 "mnemonic_export_backup_mnemonic_phrase_title" = "Back up Mnemonic Phrase";
-"mnemonic_export_message_title" = "Please save your Mnemonic Phrase privately. \nWe recommend you not to share it with anyone.";
+"mnemonic_export_message_title" = "Please save your Mnemonic Phrase privately \nWe recommend you not to share it with anyone";
 "planet_management_toolbar_title" = "Universe";
 "privatekey_export_toolbar_title" = "Private Key";
 "privatekey_export_backup_privatekey_title" = "Backup PrivateKey";
-"privatekey_export_message_title" = "Please save your Private Key privately. \nWe recommend you not to share it with anyone.";
+"privatekey_export_message_title" = "Please save your Private Key privately\nWe recommend you not to share it with anyone";
 "rename_planet_toolbar_title" = "Rename your Planet";
 "rename_planet_enter_planet_name_title" = "Enter your Planet\'s name";
 "rename_planet_btn_title" = "Save";
@@ -103,7 +103,7 @@
 "setting_currency_title" = "Currency";
 "setting_theme_setting_title" = "Theme Setting";
 "setting_version_title" = "Version";
-"erc_popup_btn_copy_title" = "Copy Address";
+"erc_popup_btn_copy_title" = "Copy";
 "erc_popup_btn_transfer_title" = "Transfer";
 "fee_popup_advanced_option_title" = "Input fee yourself";
 "fee_popup_gas_price_title" = "Gas Price (Gwei)";
@@ -111,9 +111,9 @@
 "fee_popup_fees_title" = "Fee:";
 "fee_popup_btn_cancel_title" = "Cancel";
 "fee_popup_btn_save_title" = "Save";
-"fee_popup_not_spaces_title" = "Gas Price and Gas Limit are mandatory to input.";
+"fee_popup_not_spaces_title" = "Gas Price and Gas Limit are mandatory to input";
 "fee_popup_gas_limit_least_title" = "Minimum amount of Gas is 21,000";
 "fee_popup_gas_price_least_title" = "Minimum price of Gas is 1 Gwei";
-"pincode_registration_one_more_registration_title" = "Please enter you password again";
+"pincode_registration_one_more_registration_title" = "Try again";
 "pincode_registration_reset_title" = "Reset";
 "main_footer_planets_add_new_planet_title" = "Add New Planet";
