--- a/PlanetWallet/Resources/en.lproj/Localizable.strings
+++ b/PlanetWallet/Resources/en.lproj/Localizable.strings
@@ -117,3 +117,8 @@
 "pincode_registration_one_more_registration_title" = "Try again";
 "pincode_registration_reset_title" = "Reset";
 "main_footer_planets_add_new_planet_title" = "Add New Planet";
+
+"eth_fee_popup_not_gas_zero_title" = "가스비는 0이 될 수 없습니다.";
+"eth_fee_popup_gas_check_title" = "가스비 또는 가스한도를 확인해주세요.";
+"eth_fee_popup_high_fee_error_title" = "수수료가 너무 높습니다.";
+
